--- a/quarto/derivatives/curve_sketching.qmd
+++ b/quarto/derivatives/curve_sketching.qmd
@@ -195,7 +195,7 @@ To identify how wide a viewing window should be, for the rational function the a
 
 ```{julia}
 cps = find_zeros(f', -10, 10)
-poss_ips = find_zero(f'', (-10, 10))
+poss_ips = find_zeros(f'', (-10, 10))
 extrema(union(cps, poss_ips))
 ```
 
@@ -340,7 +340,7 @@ radioq(choices, answ)
 ###### Question
 
 
-Consider the function $p(x) = x + 2x^3 + 3x^3 + 4x^4 + 5x^5 +6x^6$. Which interval shows more than a $U$-shaped graph that dominates for large $x$ due to the leading term being $6x^6$?
+Consider the function $p(x) = x + 2x^2 + 3x^3 + 4x^4 + 5x^5 +6x^6$. Which interval shows more than a $U$-shaped graph that dominates for large $x$ due to the leading term being $6x^6$?
 
 
 (Find an interval that contains the zeros, critical points, and inflection points.)
@@ -494,7 +494,7 @@ Does a plot over $[0,50]$ show qualitatively	 similar behaviour?
 ```{julia}
 #| hold: true
 #| echo: false
-yesnoq(true)
+yesnoq("no")
 ```
 
 Exponential growth has $P''(t) = P_0 a^t \log(a)^2 > 0$, so has no inflection point. By plotting over a sufficiently wide interval, can you answer: does the logistic growth model have an inflection point?
