--- a/quarto/derivatives/derivatives.qmd
+++ b/quarto/derivatives/derivatives.qmd
@@ -432,7 +432,7 @@ $$
 \frac{\log(x+h) - \log(x)}{h} = \frac{1}{h}\log(\frac{x+h}{x}) = \log((1+h/x)^{1/h}).
 $$
 
-As noted earlier, Cauchy saw the limit as $u$ goes to $0$ of $f(u) = (1 + u)^{1/u}$ is $e$. Re-expressing the above we can get $1/h \cdot \log(f(h/x))$. The limit as $h$ goes to $0$ of this is found from the composition rules for limits: as $\lim_{h \rightarrow 0} f(h/x) = e^{1/x}$, and since $\log(x)$ is continuous at $e^{1/x}$ we get this expression has a limit of $1/x$.
+As noted earlier, Cauchy saw the limit as $u$ goes to $0$ of $f(u) = (1 + u)^{1/u}$ is $e$. Re-expressing the above we can get $1/x \cdot \log(f(h/x))$. The limit as $h$ goes to $0$ of this is found from the composition rules for limits: as $\lim_{h \rightarrow 0} f(h/x) = e$, and since $\log(x)$ is continuous at $e$ we get this expression has a limit of $1/x$.
 
 
 We verify through:
@@ -775,7 +775,7 @@ f'(\square) &= 2(\square) & g'(x) &= \frac{1}{2}x^{-1/2}
 $$
 
 
-We use $\square$ for the argument of `f'` to emphasize that $g(x)$ is the needed value, not just $x$:
+We use $\square$ for the argument of $f'$ to emphasize that $g(x)$ is the needed value, not just $x$:
 
 
 $$
@@ -1651,7 +1651,7 @@ $$
 \frac{d(f\circ g)}{dx}\mid_{x=1}
 &= \lim_{h\rightarrow 0} \frac{f(g(1) + g'(1)h)-f(g(1))}{h}\\
 &= \lim_{h\rightarrow 0} \frac{f(g(1) + g'(1)h)-f(g(1))}{g'(1)h} \cdot g'(1)\\
-&= \lim_{h\rightarrow 0} (f\circ g)'(g(1)) \cdot g'(1).
+&= \lim_{h\rightarrow 0} f'(g(1)) \cdot g'(1).
 \end{align*}
 $$
 
