--- a/quarto/derivatives/first_second_derivatives.qmd
+++ b/quarto/derivatives/first_second_derivatives.qmd
@@ -243,7 +243,7 @@ g(x) = sqrt(abs(x^2 - 1))
 cps = find_zeros(g', -2, 2)
 ```
 
-We see the three values $-1$, $0$, $1$ that correspond to the two zeros and the relative minimum of $x^2 - 1$. We could graph things, but instead we characterize these values using a sign chart. A piecewise continuous function can only change sign when it crosses $0$ or jumps over $0$. The derivative will be continuous, except possibly at the three values above, so is piecewise continuous.
+We see the three values $-1$, $0$, $1$ that correspond to the two zeros and the relative maximum of $x^2 - 1$. We could graph things, but instead we characterize these values using a sign chart. A piecewise continuous function can only change sign when it crosses $0$ or jumps over $0$. The derivative will be continuous, except possibly at the three values above, so is piecewise continuous.
 
 
 A sign chart picks convenient values between crossing points to test if the function is  positive or negative over those intervals. When computing by hand, these would ideally be values for which the function is easily computed. On the computer, this isn't a concern; below the midpoint is chosen:
@@ -328,7 +328,7 @@ At $x=0$ we have to the left and right signs found by
 fp(-pi/2), fp(pi/2)
 ```
 
-Both are negative. The derivative does not change sign at $0$, so the critical point is neither a relative minimum or maximum.
+Both are negative. The derivative does not change sign at $0$, so the critical point is neither a relative minimum nor maximum.
 
 
 What about at $2\pi$? We do something similar:
@@ -338,7 +338,7 @@ What about at $2\pi$? We do something similar:
 fp(2pi - pi/2), fp(2pi + pi/2)
 ```
 
-Again, both negative. The function $f(x)$ is just decreasing near $2\pi$, so again the critical point is neither a relative minimum or maximum.
+Again, both negative. The function $f(x)$ is just decreasing near $2\pi$, so again the critical point is neither a relative minimum nor maximum.
 
 
 A graph verifies this:
@@ -454,7 +454,7 @@ We won't work with these definitions in this section, rather we will characteriz
 
 
 
-A proof of this makes use of the same trick used to establish the mean value theorem from Rolle's theorem. Assume $f'$ is increasing and let $g(x) = f(x) - (f(a) + M \cdot (x-a))$, where $M$ is the slope of the secant line between $a$ and $b$. By construction $g(a) = g(b) = 0$. If $f'(x)$ is increasing, then so is $g'(x) = f'(x) + M$. By its definition above, showing $f$ is concave up is the same as showing $g(x) \leq 0$. Suppose to the contrary that there is a value where $g(x) > 0$ in $[a,b]$. We show this can't be. Assuming $g'(x)$ always exists, after some work, Rolle's theorem will ensure there is a value where $g'(c) = 0$ and $(c,g(c))$ is a relative maximum, and as we know there is at least one positive value, it must be $g(c) > 0$. The first derivative test then ensures that $g'(x)$ will increase to the left of $c$ and decrease to the right of $c$, since $c$ is at a critical point and not an endpoint. But this can't happen as $g'(x)$ is assumed to be increasing on the interval.
+A proof of this makes use of the same trick used to establish the mean value theorem from Rolle's theorem. Assume $f'$ is increasing and let $g(x) = f(x) - (f(a) + M \cdot (x-a))$, where $M$ is the slope of the secant line between $a$ and $b$. By construction $g(a) = g(b) = 0$. If $f'(x)$ is increasing, then so is $g'(x) = f'(x) + M$. By its definition above, showing $f$ is concave up is the same as showing $g(x) \leq 0$. Suppose to the contrary that there is a value where $g(x) > 0$ in $[a,b]$. We show this can't be. Assuming $g'(x)$ always exists, after some work, Rolle's theorem will ensure there is a value where $g'(c) = 0$ and $(c,g(c))$ is a relative maximum, and as we know there is at least one positive value, it must be $g(c) > 0$. The first derivative test then ensures that $g'(x)$ will be positive to the left of $c$ and negative to the right of $c$, since $c$ is at a critical point and not an endpoint. But this can't happen as $g'(x)$ is assumed to be increasing on the interval.
 
 
 The relationship between increasing functions and their derivatives – if $f'(x) > 0$ on $I$, then $f$ is increasing on $I$ – gives this second characterization of concavity when the second derivative exists:
@@ -503,8 +503,8 @@ Concave up functions are "opening" up, and often clearly $U$-shaped, though that
 
 If $c$ is a critical point of $f(x)$ with $f''(c)$ existing in a neighborhood of $c$, then
 
-   * $f$ will have a relative maximum at the critical point $c$ if $f''(c) > 0$,
-   * $f$ will have a relative minimum at the critical point $c$ if $f''(c) < 0$, and
+   * $f$ will have a relative minimum at the critical point $c$ if $f''(c) > 0$,
+   * $f$ will have a relative maximum at the critical point $c$ if $f''(c) < 0$, and
    * *if* $f''(c) = 0$ the test is *inconclusive*.
 
 :::
@@ -799,28 +799,20 @@ scatter!(ips, ex.(ips), marker=(5, :brown3, :star5))
 The black circle denotes what?
 
 ```{julia}
+#| hold: true
+#| echo: false
 choices = [raw"A zero of $f$",
            raw"A critical point of $f$",
            raw"An inflection point of $f$"]
 answ = 1
 radioq(choices, answ)
 ```
-
-
-The black circle denotes what?
-
-```{julia}
-choices = [raw"A zero of $f$",
-           raw"A critical point of $f$",
-           raw"An inflection point of $f$"]
-answ = 1
-radioq(choices, answ)
-```
-
 
 The green diamond denotes what?
 
 ```{julia}
+#| hold: true
+#| echo: false
 choices = [raw"A zero of $f$",
            raw"A critical point of $f$",
            raw"An inflection point of $f$"]
@@ -832,6 +824,8 @@ radioq(choices, answ)
 The red stars denotes what?
 
 ```{julia}
+#| hold: true
+#| echo: false
 choices = [raw"Zeros of $f$",
            raw"Critical points of $f$",
            raw"Inflection points of $f$"]
