--- a/quarto/derivatives/implicit_differentiation.qmd
+++ b/quarto/derivatives/implicit_differentiation.qmd
@@ -416,7 +416,7 @@ $$
 6x - (6y \frac{dy}{dx} \cdot \frac{dy}{dx} + 3y^2 \frac{d^2y}{dx^2}) = 0.
 $$
 
-Again, if must be that $d^2y/dx^2$ appears as a linear factor, so we can solve for it:
+Again, it must be that $d^2y/dx^2$ appears as a linear factor, so we can solve for it:
 
 
 $$
@@ -456,7 +456,7 @@ eqn    = K(x,y)
 eqn1   = eqn(y => u(x))
 dydx   = solve(diff(eqn1,x), diff(u(x), x))[1]        # 1 solution
 d2ydx2 = solve(diff(eqn1, x, 2), diff(u(x),x, 2))[1]  # 1 solution
-eqn2   = d2ydx2(diff(u(x), x) => dydx, u(x) => y)
+eqn2   = subs(d2ydx2, diff(u(x), x) => dydx, u(x) => y)
 simplify(eqn2)
 ```
 
@@ -637,7 +637,7 @@ Okay, now we need to put this value back into our expression for the `x` value a
 
 
 ```{julia}
-xstar = N(cps[2](y => ystar, a =>3, b => 3, L => 3))
+xstar = N(cps[2](y => ystar, a =>3, b => 3))
 ```
 
 Our minimum is at `(xstar, ystar)`, as this graphic shows:
