--- a/quarto/derivatives/lhospitals_rule.qmd
+++ b/quarto/derivatives/lhospitals_rule.qmd
@@ -115,7 +115,7 @@ $$
 \lim_{x \rightarrow 0} \frac{e^x - e^{-x}}{x}.
 $$
 
-It too is of the indeterminate form $0/0$. The derivative of the top is $e^x + e^{-x}$, which is $2$ when $x=0$, so the ratio of $f'(0)/g'(0)$ is seen to be $2$ By continuity, the limit of the ratio of the derivatives is $2$. Then by L'Hospital's rule, the limit above is $2$.
+It too is of the indeterminate form $0/0$. The derivative of the top is $e^x + e^{-x}$, which is $2$ when $x=0$, so the ratio of $f'(0)/g'(0)$ is seen to be $2$. By continuity, the limit of the ratio of the derivatives is $2$. Then by L'Hospital's rule, the limit above is $2$.
 
 
   * Sometimes, L'Hospital's rule must be applied twice. Consider this limit:
@@ -820,7 +820,7 @@ $$
 #| hold: true
 #| echo: false
 choices = [
-"``e^{-2/\\pi}``",
+"``e^{2/\\pi}``",
 "``{2\\pi}``",
 "``1``",
 "``0``",
