--- a/quarto/derivatives/newtons_method.qmd
+++ b/quarto/derivatives/newtons_method.qmd
@@ -69,7 +69,7 @@ x₃ = (babylon ∘ babylon ∘ babylon)(2//1)
 x₃, x₃^2.0
 ```
 
-This is now accurate to the sixth decimal point.  That is about as far as we, or the Bablyonians, would want to go by hand. Using rational numbers quickly grows out of hand. The next step shows the explosion.
+This is now accurate to the sixth decimal point.  That is about as far as we, or the Babylonians, would want to go by hand. Using rational numbers quickly grows out of hand. The next step shows the explosion.
 
 
 ```{julia}
@@ -212,7 +212,7 @@ In practice, the algorithm is implemented not by repeating the update step a fix
 
 Newton looked at this same example in 1699 (B.T. Polyak, *Newton's method and its use in optimization*, European Journal of Operational Research. 02/2007; 181(3):1086-1096.; and Deuflhard *Newton Methods for Nonlinear Problems: Affine Invariance and Adaptive Algorithms*) though his technique was slightly different as he did not use the derivative, *per se*, but rather an approximation based on the fact that his function was a polynomial.
 
-We can read that he guessed the answer was ``2 + p``, as there is a sign change between $2$ and $3$. Newton put this guess into the polynomial to get after simplification ``p^3 + 6p^2 + 10p - 1``. This has an **approximate** zero found by solving the linear part ``10p-1 = 0``.  Taking ``p = 0.1`` he then can say the answer looks like ``2 + p + q`` and repeat to get ``q^3 + 6.3\cdot q^2 + 11.23 \cdot q + 0.061 = 0``. Again taking just the linear part estimates `q = 0.005431...`.  After two steps the estimate is `2.105431...`. This can be continued by expressing the answer as ``2 + p + q + r`` and then solving for an estimate for ``r``.
+We can read that he guessed the answer was ``2 + p``, as there is a sign change between $2$ and $3$. Newton put this guess into the polynomial to get after simplification ``p^3 + 6p^2 + 10p - 1``. This has an **approximate** zero found by solving the linear part ``10p-1 = 0``.  Taking ``p = 0.1`` he then can say the answer looks like ``2 + p + q`` and repeat to get ``q^3 + 6.3q^2 + 11.23q + 0.061 = 0``. Again taking just the linear part estimates `q = -0.005431...`.  After two steps the estimate is `2.094568...`. This can be continued by expressing the answer as ``2 + p + q + r`` and then solving for an estimate for ``r``.
 
 Raphson (1690) proposed a simplification avoiding the computation of new polynomials, hence the usual name of the Newton-Raphson method. Simpson introduced derivatives into the formulation and systems of equations.
 
@@ -696,7 +696,7 @@ If $M$ were just a constant and we suppose $e_0 = 10^{-1}$ then $e_1$ would be l
 To identify $M$, let $\alpha$ be the zero of $f$ to be approximated. Assume
 
 
-  * The function $f$ has at continuous second derivative in a neighborhood of $\alpha$.
+  * The function $f$ has a continuous second derivative in a neighborhood of $\alpha$.
   * The value $f'(\alpha)$ is *non-zero* in the neighborhood of $\alpha$.
 
 
@@ -865,7 +865,7 @@ The function $f(x) = x^{20} - 1$ has two bad behaviours for Newton's
 method: for $x < 1$ the derivative is nearly $0$ and for $x>1$ the
 second derivative is very big. In this illustration, we have an
 initial guess of $x_0=8/9$. As the tangent line is fairly flat, the
-next approximation is far away, $x_1 = 1.313\dots$. As this guess is
+next approximation is far away, $x_1 = 1.313\dots$. As this guess 
 is much bigger than $1$, the ratio $f(x)/f'(x) \approx
 x^{20}/(20x^{19}) = x/20$, so $x_i - f(x_i)/f'(x_i) \approx (19/20)x_i$
 yielding slow, linear convergence until $f''(x_i)$ is moderate. For
@@ -1033,7 +1033,7 @@ Let $f(x) = x^2 - 3^x$. This has derivative $2x - 3^x \cdot \log(3)$. Starting w
 f(x) = x^2 - 3^x;
 fp(x) = 2x - 3^x*log(3);
 val = Roots.newton(f, fp, 0);
-numericq(val, 1e-14)
+numericq(val, 1e-1)
 ```
 
 ###### Question
@@ -1424,7 +1424,7 @@ yesnoq("no")
 ###### Question
 
 
-Quadratic convergence of Newton's method only applies to *simple* roots. For example, we can see (using the `verbose=true` argument to the `Roots` package's `newton` method, that it only takes $4$ steps to find a zero to $f(x) = \cos(x) - x$ starting at $x_0 = 1$. But it takes many more steps to find the same zero for $f(x) = (\cos(x) - x)^2$.
+Quadratic convergence of Newton's method only applies to *simple* roots. For example, we can see (using the `verbose=true` argument to the `Roots` package's `newton` method), that it only takes $4$ steps to find a zero to $f(x) = \cos(x) - x$ starting at $x_0 = 1$. But it takes many more steps to find the same zero for $f(x) = (\cos(x) - x)^2$.
 
 
 How many?
@@ -1454,7 +1454,7 @@ implicit_plot(f, xlims=(-2,2), ylims=(-2,2), legend=false)
 Can we find which point on its graph has the largest $y$ value?
 
 
-This would be straightforward *if* we could write $y(x) = \dots$, for then we would simply find the critical points and investiate. But we can't so easily solve for $y$ interms of $x$. However, we can use Newton's method to do so:
+This would be straightforward *if* we could write $y(x) = \dots$, for then we would simply find the critical points and investigate. But we can't so easily solve for $y$ interms of $x$. However, we can use Newton's method to do so:
 
 
 ```{julia}
