--- a/quarto/derivatives/taylor_series_polynomials.qmd
+++ b/quarto/derivatives/taylor_series_polynomials.qmd
@@ -118,7 +118,7 @@ The term "best" is deserved, as any other straight line will differ at least in 
 $$
 \begin{align*}
 \frac{F'(\xi)}{G'(\xi)} &=
-\frac{f'(\xi) - f''(\xi)(\xi-x) - f(\xi)\cdot 1}{2(\xi-x)} \\
+\frac{f'(\xi) - f''(\xi)(\xi-x) - f'(\xi)\cdot 1}{2(\xi-x)} \\
 &= -f''(\xi)/2\\
 &= \frac{F(c) - F(x)}{G(c) - G(x)}\\
 &= \frac{f(c) - f'(c)(c-x) - (f(x) - f'(x)(x-x))}{(c-x)^2 - (x-x)^2} \\
@@ -445,7 +445,7 @@ This can be solved to give this relationship:
 
 
 $$
-\frac{d^2\theta}{dt^2} = - \frac{g}{R}\theta.
+\frac{d^2\theta}{dt^2} = \frac{g}{R}\theta.
 $$
 
 The solution to this "equation" can be written (in some parameterization) as $\theta(t)=A\cos \left(\omega t+\phi \right)$. This motion is the well-studied simple [harmonic oscillator](https://en.wikipedia.org/wiki/Harmonic_oscillator), a model for a simple pendulum.
@@ -721,7 +721,7 @@ The height of a [GPS satellite](http://www.gps.gov/systems/gps/space/) is about 
 
 
 ```{julia}
-Hₛ = 12250 * 1609.34   # 1609 meters per mile
+Hₛ = 12550 * 1609.34   # 1609 meters per mile
 HRₛ = Hₛ/R
 
 Prealₛ = P0 * (1 + HRₛ)^(3/2)
@@ -753,7 +753,7 @@ Finally, we show how to use the `Unitful` package. This package allows us to def
 m, mi, kg, s, hr = u"m", u"mi", u"kg", u"s", u"hr"
 
 G = 6.67408e-11 * m^3 / kg / s^2
-H = uconvert(m, 12250 * mi)   # unit convert miles to meter
+H = uconvert(m, 12550 * mi)   # unit convert miles to meter
 R = uconvert(m,  3959 * mi)
 M = 5.972e24 * kg
 
@@ -858,8 +858,8 @@ For notational purposes, let $g(x)$ be the inverse function for $f(x)$. Assume *
 
 $$
 \begin{align*}
-f(x_0 + \Delta_x) &= f(x_0) + a_1 \Delta_x + a_2 (\Delta_x)^2 + \cdots a_n  (\Delta_x)^n + \dots\\
-g(y_0 + \Delta_y) &= g(y_0) + b_1 \Delta_y + b_2 (\Delta_y)^2 + \cdots b_n  (\Delta_y)^n + \dots
+f(x_0 + \Delta_x) &= f(x_0) + a_1 \Delta_x + a_2 (\Delta_x)^2 + \cdots + a_n  (\Delta_x)^n + \dots\\
+g(y_0 + \Delta_y) &= g(y_0) + b_1 \Delta_y + b_2 (\Delta_y)^2 + \cdots + b_n  (\Delta_y)^n + \dots
 \end{align*}
 $$
 
@@ -897,7 +897,7 @@ $$
 (This is following [Liptaj](https://vixra.org/pdf/1703.0295v1.pdf)).
 
 
-We will use `SymPy` to take this limit for the first `4` derivatives. Here is some code that expands $x + \Delta_x = g(f(x_0 + \Delta_x))$ and then uses `SymPy` to solve:
+We will use `SymPy` to take this limit for the first `4` derivatives. Here is some code that expands $x_0 + \Delta_x = g(f(x_0 + \Delta_x))$ and then uses `SymPy` to solve:
 
 
 ```{julia}
