--- a/quarto/derivatives/optimization.qmd
+++ b/quarto/derivatives/optimization.qmd
@@ -1482,7 +1482,7 @@ a = find_zero(y', 1)
 numericq(a)
 ```
 
-Numerically find the value of $a$ that minimizes the length of the line seqment $PQ$.
+Numerically find the value of $a$ that minimizes the length of the line segment $PQ$.
 
 
 ```{julia}
