--- a/quarto/misc/calculus_with_julia.qmd
+++ b/quarto/misc/calculus_with_julia.qmd
@@ -68,7 +68,7 @@ For more control, the command line and `IJulia` provide access to the function i
 ] status
 ```
 
-External packages are *typically* installed from GitHub and if they are regisered, installation is as easy as calling `add`:
+External packages are *typically* installed from GitHub and if they are registered, installation is as easy as calling `add`:
 
 
 ```{julia}
